terraform/bootcamp_security.tf
resource "aws_security_group" "ingress-all-bootcamp" {
name = "allow-all-sg"
vpc_id = "${aws_vpc.bootcamp-env.id}"
ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
egress {
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "ingress-http-bootcamp" {
name = "allow-http-sg"
vpc_id = "${aws_vpc.bootcamp-env.id}"
ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 80
    to_port = 80
    protocol = "tcp"
  }
ingress {
  cidr_blocks = [
    "0.0.0.0/0"
  ]
  from_port = 443
  to_port = 443
  protocol = "tcp"
}
}
